--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.0.1",
+    "font-awesome": "^4.7.0",
     "hooks": "^0.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
