--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^5.2.1",
     "router": "^1.3.7",
     "web-vitals": "^2.1.4"
   },
