--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,24 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "background_color": "green",
+  "description": "Shows random fox pictures. Hey, at least it isn't cats.",
+  "theme_color": "#00AF40",
+  "display": "standalone",
+
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "./images/unnamed.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
-      "src": "logo192.png",
+      "src": "./images/unnamed.png",
+      "sizes": "512x512",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "any"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "name": "Al Mulla Industries Service Mobile Solutions",
+  "short_name": "Al Mulla Industries Service r",
+  "start_url": "."
 }
